# rci-agent

./: .gitignore  Cargo.toml  README.md  ejample.json
src/: lib.rs  main.rs
src/background/: auth.rs  get_tasks.rs  mod.rs  update_task.rs
src/instructions_management/: artifacts_output.rs  instructions.rs  mod.rs  programming_languages.rs  tasks.rs
src/task_executor/: executor.rs  executor_background.rs  mod.rs
src/utils/: error.rs  mod.rs  shared_functions.rs  stared_data.rs
src/utils/stared_data/: lang.rs  mod.rs  output.rs  step.rs  task.rs  task_output.rs  task_status.rs  task_wrapper.rs
