[package]
name = "rci-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
azure_core = "0.21.0"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"

tokio = { version = "1.41.0", features = ["full"] }
env-file-reader = "0.3.0"
reqwest = { version = "0.12.9", features = ["json"] }
